Add some styling to header

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
         <nav class="first-nav">
             <ul class="first-nav-content">
-                <li><a href=""></a><img src="images/twitter.png" alt=""></li>
-                <li><a href=""></a><img src="images/twitter.png" alt=""></li>
+                <li><a href=""></a><img src="" alt=""></li>
+                <li><a href=""></a><img src="" alt=""></li>
                 <li><a href=""></a>Englich</li>
                 <li><a href=""></a>My page</li>
                 <li><a href=""></a>Logout</li>
@@ -27,10 +27,13 @@
                 <li><a href=""></a>Join</li>
                 <li><a href=""></a>Sponsor</li>
                 <li><a href=""></a>News</li>
-                <li><a href=""></a>FIFA compaign</li>
+                <button class="nav-button"><a href=""></a>FIFA compaign</button>
             </ul>
         </nav>
     </header>
+    <section class="headline">
+
+    </section>
     
 </body>
 </html>
