Add the headline

--- a/index.html
+++ b/index.html
@@ -32,6 +32,24 @@
         </nav>
     </header>
     <section class="headline">
+        <div>
+            <h1>WELCOME TO FIFA ORGANIZATION</h1>
+        </div>
+        <div class="headlin-description">
+            <p>
+                The new FIFA is modernising football to be global, accessible and inclusive in all aspects. Not just on one or two continents, but everywhere.
+                <br>
+
+                Under our vision to make football truly global, we will help develop football everywhere so that there are at least 50 national teams and 50 clubs from all continents that can compete at a top competitive level.
+            </p>
+        </div>
+        <h2>Latest FIFA News</h2>
+        <div class="headlin-description">
+            <p>
+                FIFA is working on a wide range of topics from improving the women's game and developing football around the world to ensuring better football governance structures.
+            </p>
+
+        </div>
 
     </section>
     
