Add the required change 3

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
     <section class="partner" id="Studio">
         <h3>Partner</h3>
-        <div class="border border-dir"></div>
+        <div class="border"></div>
         <ul class="Partner-logo">
           <li><img decoding="async" loading="lazy" height="57" width="114" src="https://cloudinary.fifa.com/m/7ecf457666d9fb6c/original/fwc2022_fp_dalian-wanda-co_lbgr.eps?tx=c_fill,x_57,y_28,g_xy_center,q_auto,w_114,h_57" alt="Wanda group" title="Wanda group" class="image_img__JuDY4"></li>
           <li><img decoding="async" loading="lazy" height="57" width="114" src="https://cloudinary.fifa.com/m/7b71c2f3185bddfb/original/fwc2022_fp_cocacola-co_lbgr.eps?tx=c_fill,x_57,y_28,g_xy_center,q_auto,w_114,h_57" alt="Coca Cola" title="Coca Cola" class="image_img__JuDY4"></li>
